# spec_0_test_package

./: pixi.toml  pyproject.toml  update.sh
.github/workflows/: update-spec-0-deps.yml
