[project]
authors = [{name = "Sam Vente", email = "savente93@proton.me"}]
name = "spec_0_test_package"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = ['scikit-learn>1.2.0']


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
spec_0_test_package = { path = ".", editable = true }

[tool.pixi.dependencies]
matplotlib = ">=3.10.5,<4"

[tool.pixi.feature.foo.dependencies]
scipy  = "*"
xarray = ">=2022.7.0,<2026"

[tool.pixi.environments]
bar = ["foo"]
