[project]
authors = [{name = "Sam Vente", email = "savente93@proton.me"}]
name = "spec_0_test_package"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = ["scikit-learn>=1.3.0"]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
spec_0_test_package = { path = ".", editable = true }

[tool.pixi.dependencies]
matplotlib = ">=3.10.5,<4"

[feature.foo.dependencies]
scipy  = "*"
xarray = ">=2025.7.1,<2026"

[environments]
bar = ["foo"]
